# text-recognition-tensorflow-cpp

./: .gitignore  README.md
TfCpp_HandRecogApp/: CMakeLists.txt  main.cpp
TfCpp_HandRecogApp/enum/: ActivationFunction.h
TfCpp_HandRecogApp/headers/: DenseLayer.h  GraphLogger.h  Helper.h  MNISTReader.h  MainWindow.h  Model.h  Optimizer.h  ScribbleArea.h
TfCpp_HandRecogApp/sources/: DenseLayer.cpp  GraphLogger.cpp  Helper.cpp  MNISTReader.cpp  MainWindow.cpp  Model.cpp  Optimizer.cpp  ScribbleArea.cpp
TfCpp_HandRecogApp/tests/: model-test.cpp
exercises/: gruendungstool-2022-02-03-data.xlsx
exercises/PerceptronModelWithTensors/: CMakeLists.txt  main.cpp
exercises/example/: .~lock.gruendungstool-2022-02-03-data.xlsx#
exercises/pMCGPT/: CMakeLists.txt  main.cpp
exercises/tensorflow2test/: CMakeLists.txt  main.cpp
exercises/tensorsWithTensorflow/: CMakeLists.txt  main.cpp
exercises/testNewTensorflow/: CMakeLists.txt  FindTensorFlow.cmake  main.cpp
exercises/testingOperations/: CMakeLists.txt  main.cpp
exercises/testtf/: CMakeLists.txt  main.cpp
exercises/tf_matMul/: CMakeLists.txt  main.cpp
exercises/tfccTest/: CMakeLists.txt  main.cpp
exercises/untitled/: BUILD  CMakeLists.txt  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-untitled  main.cpp
exercises/untitled1/: CMakeLists.txt  main.cpp
exercises/untitled2/: CMakeLists.txt  zero_out.cpp
